# ZEN_AI_RAG

./: .coverage  .env.example  .gitignore  .xrayignore  ARBITRATOR_IMPROVEMENTS.md  BOOTSTRAP_IMPROVEMENTS.md  BUG_FIX_PARALLEL_FLAG.md  CLEANUP_VERIFICATION.md  COMPLETE_TEST_REPORT.md  CPU_DETECTION_FIXED.md  CRASH_ANALYSIS_COMPLETE.md  CRASH_HANDLING_COMPLETE.md  CRITICAL_FIX_WAIT.md  CROSS_PLATFORM.md  DEPLOYMENT_COMPLETE_SUMMARY.md  DESIGN_FIXES_COMPLETE.md  DESIGN_REVIEW_COMPARISON.md  DESIGN_REVIEW_COMPARISON_2026-01-23.md  DESIGN_REVIEW_FIXES.md  DESIGN_REVIEW_INDEX_2026.md  DISTRIBUTION_PACKAGE_COMPLETE.md  DOCUMENTATION_STANDARD.md  EXECUTIVE_SUMMARY_2026.md  EXTERNAL_LLM_TEST_PLAN.md  FINAL_FIXES_SUMMARY.md  FINAL_PACKAGE_SUMMARY.md  FREE_API_KEYS_GUIDE.md  FUNCTION_ANALYSIS.md  FUNCTION_DATA_FLOW.md  HOW_TO_RUN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTANCE_GUARD_FIX.md  Install_llama_cpp.bat  LLAMA_SERVER_CRASH_FIX.md  LOADING_MESSAGES_FEATURE.md  LOGGING_FEATURE.md  METRICS_AND_KPI_DASHBOARD.md  MODERN_UI_INTEGRATION_COMPLETE.md  (+156 more)
.claude/: settings.local.json
Rustified/: Cargo.toml
Rustified/analysis/: analyze_for_rustification.py  rustification_analysis.json
Rustified/benchmarks/: benchmark_harness.py  python_baseline.json  python_baseline_actual.py  run_python_baselines.py  sample_benchmark_report.json  sample_benchmark_results.json
Rustified/src/: cpu.rs  main.rs
bench/: DEVELOPER_GUIDE.md  README.md  Run_me.bat  active_pipelines.json  app.py  conftest.py  crawler.py  llm_config.json  pyproject.toml  requirements.txt  sites.json  test_advanced_rag.py  test_crawl.py  test_live_e2e.py
bench/index_data/: embeddings.npy  meta.json
bench/static/: zen_tooltip.js
bench/templates/: index.html
bench/tests/: test_e2e_extreme.py  test_smart_xray.py
dist_build/: README  build_wheel.py  pyproject.toml  setup_zenai_core.py
dist_build/_staging/: __init__.py
dist_build/_staging/Core/: exceptions.c  exceptions.py  models.c
dist_build/_staging/local_llm/: enhanced_model_card.c  enhanced_model_card.py  llama_cpp_manager.c  llama_cpp_manager.py  local_llm_manager.c  local_llm_manager.py  model_card.c
dist_build/_staging/rag_core/: __init__.py  bm25_index.c  bm25_index.py  cache.c  cache.py  chunker.c  chunker.py  dedup.c  embeddings.c  embeddings.py  engine.c  engine.py  fusion.c  fusion.py  reranker.c  reranker.py  search.c  search.py
dist_build/_staging/zenai_adapters/: adapter_factory.c  llm_adapters.c  llm_adapters.py  rag_integration.c  rag_integration.py
ui/: icons.py  (+33 more)
(+1158 files in other folders)
