[project]
name = "zen-ai-rag"
version = "1.0.0"
description = "ZenAI RAG pipeline with local LLM support"
requires-python = ">=3.10"
dependencies = [
    "zen-core-libs",
]

[tool.uv.sources]
zen-core-libs = { workspace = true }

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["dist_build", "__pycache__", "conversation_cache", "qdrant_storage", "rag_storage", "rag_verification_storage"]

[tool.ruff.lint]
ignore = [
    "E712",
    "E402",
    "E741",
    "E701",
    "E702",
    "F541",
    "F811",
]

[tool.ruff.lint.per-file-ignores]
"ui_flet/*.py" = ["F821", "F401"]
"ui_flet/**/*.py" = ["F821", "F401"]
"zena_flet.py" = ["F821", "F401"]
"zena.py" = ["F821", "F401"]
"tests/*.py" = ["F821", "F401"]
"tests/**/*.py" = ["F821", "F401"]
"scripts/*.py" = ["F821", "F401"]
"scripts/**/*.py" = ["F821", "F401"]
"zena_mode/*.py" = ["F821"]
"zena_mode/**/*.py" = ["F821"]
"ui/*.py" = ["F821", "F401"]
"ui/**/*.py" = ["F821", "F401"]
